welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: identifier expected but integer literal found.
    setCouleurBrosse(motif[i-1])
                             ^Array1:15: error: ']' expected but '}' found.
  }}
  ^